<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UpdateNumberActivity">

    <LinearLayout
        android:id="@+id/old_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/default_16"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/enter_old_number" />

        <EditText
            android:id="@+id/old_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/check_old_number_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check" />

        <TextView
            android:id="@+id/old_number_error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:gravity="center_horizontal"
            android:textColor="@color/colorRed" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/new_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/default_16"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/enter_new_number" />

        <EditText
            android:id="@+id/new_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/update_new_number_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update" />

        <TextView
            android:id="@+id/new_number_error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:gravity="center_horizontal"
            android:textColor="@color/colorRed" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/verification_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/default_16"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/enter_verification_code" />

        <EditText
            android:id="@+id/verification_code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/verify_verifiction_code_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify" />

        <TextView
            android:id="@+id/verification_code_error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:gravity="center_horizontal"
            android:textColor="@color/colorRed" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/update_PB"
        android:layout_width="@dimen/default_PB"
        android:layout_height="@dimen/default_PB"
        android:visibility="gone"
        android:layout_gravity="center_horizontal" />

</LinearLayout>